minikube/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: webserver
spec:
  containers:
  - name: pod-demo
    image: ingress:v1.0
    # imagePullPolicy: Never
    ports:
    - containerPort: 5000
