minikube/web_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:      
      - name: web-pod
        image: webtest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
