minikube/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30390
    protocol: TCP
    targetPort: 5000
  selector:
    app: webserver
