minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
      - "mecit.ntut-smodist.tw"
    secretName: my-tls-secret
  rules:
  - host: "mecit.ntut-smodist.tw"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
